python-glanceclient (1:0.9.0-2) unstable; urgency=high

  * Ran wrap-and-sort.
  * CVE-2013-4111: Fix missing SSL certificate check (Closes: #718282).
  * Cleans correctly so the package can be built twice.
  * Using testrepository instead of run_test.py for running tests.
  * Standards-Version: is now 3.9.4.

 -- Thomas Goirand <zigo@debian.org>  Thu, 30 May 2013 13:55:25 +0800

python-glanceclient (1:0.9.0-1) unstable; urgency=low

  * Uploading to unstable.
  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Mon, 13 May 2013 09:39:00 +0000

python-glanceclient (1:0.8.0-1) experimental; urgency=low

  * New upstream release.
  * Removes debian/patches/fix-ubuntu-tests.patch.
  * python-keystoneclient must be >= 1:0.1.2.
  * Added python-sphinx build-depends.

 -- Thomas Goirand <zigo@debian.org>  Fri, 22 Feb 2013 03:17:57 +0800

python-glanceclient (1:0.6.0-1) experimental; urgency=low

  [ Mehdi Abaakouk ]
  * First debian release (Closes: #687505)

  [ Thomas Goirand ]
  * Added a Replaces: glance-common (<< 2012.2), since this package provides
  the glance userland command line.
  * Using unified include pkgos.make from openstack-pkg-tools in debian/rules.

 -- Thomas Goirand <zigo@debian.org>  Wed, 28 Nov 2012 11:11:56 +0000

python-glanceclient (1:0.5.0.1.7402590-0ubuntu1) quantal; urgency=low

  [ Soren Hansen ]
  * Update debian/watch to account for symbolically named tarballs and
    use newer URL.
  * Fix Launchpad URLs in debian/watch.

  [ Chuck Short ]
  * New upstream version.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 07 Sep 2012 12:23:37 -0500

python-glanceclient (1:0.4.1-0ubuntu2) quantal; urgency=low

  * debian/patches/fix-ubuntu-tests.patch: Refreshed.

 -- Adam Gandelman <adamg@canonical.com>  Wed, 22 Aug 2012 23:43:28 -0700

python-glanceclient (1:0.4.1-0ubuntu1) quantal; urgency=low

  [ Adam Gandelman ]
  * debian/control, pydist-overrides: Add python-setuptools-git,
    python-warlock.

  [ Chuck Short ]